# rules_swift_package_manager

examples/swiftui_example/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  swift_deps_index.json
examples/swiftui_example/Client/: BUILD.bazel
examples/swiftui_example/Client/Client/: ClientApp.swift
examples/swiftui_example/Client/Client/Model/: Content.swift
examples/swiftui_example/Client/Client/Service/: FooServiceProxy.swift
examples/swiftui_example/Client/Client/View/: ContentView.swift
examples/swiftui_example/Client/ClientTests/: ClientTests.swift
examples/swiftui_example/Client/ClientUITests/: ClientUITests.swift  ClientUITestsLaunchTests.swift
examples/swiftui_example/Proto/: BUILD.bazel  foo_service.proto
